--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "@ng-icons/core": "^25.2.0",
+    "@ng-icons/heroicons": "^25.2.0",
     "rxjs": "~7.8.0",
     "tailwindcss-animate": "^1.0.7",
     "tslib": "^2.3.0",
