--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@ng-icons/core": "^25.2.0",
     "@ng-icons/heroicons": "^25.2.0",
     "rxjs": "~7.8.0",
+    "tailwind-scrollbar-hide": "^1.1.7",
     "tailwindcss-animate": "^1.0.7",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
